// Parameter format

syntax = "proto3";

package iface.param;

option java_package = "com.iface.param";
option java_outer_classname = "Parameters";

message ExtractFeatureParams {
  string url = 1; // Image URL
}

message ExtractFeatureResponse {
  string feat = 1; // feature buffer
}

message FacialDetectParams {
  string url = 1; // Image URL
}

message Point {
  int32 x = 1;
  int32 y = 2;
}

message Region {
  int32 x = 1;
  int32 y = 2;
  int32 width = 3;
  int32 height = 4;
}

message Landmark {
  repeated Point pts = 1;
}

message FacialDetectResponse {
  repeated Region regions = 1;
  repeated Landmark landmarks = 2;
}

message SimilarityParams {
  string feat1 = 1;
  string feat2 = 2;
}

message SimilarityResponse {
  float score = 1;
}
